# book-loader

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github-actions.yml
src/book_loader/: __init__.py  __main__.py
src/book_loader/elements/: __init__.py  _protocol.py  chapter.py  image.py  paragraph.py
src/book_loader/formatters/: __init__.py  _protocol.py  fb2.py  txt.py
src/book_loader/loaders/: __init__.py  _protocol.py  ranobelib.py
src/book_loader/types/: __init__.py  book.py
src/book_loader/visitors/: __init__.py  _protocol.py  txt.py
