[project]
name = "book_loader"
version = "0.1.0"
description = "Программа для загрузки книг из открытых источников"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
book-loader = "book_loader:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.5",
    "types-requests>=2.32.4.20250913",
]


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]


[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "ANN", "S", "W"]
exclude = ["dist", "build", ".venv"]


[tool.ruff.lint.pycodestyle]
max-line-length = 88


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
